src/assets/css/styles.css
/* ... */
.sideItemContentWrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.sideItemText {
    font-size: 3.6rem;
    font-weight: 300;
    color: var(--black_text);
    text-transform: capitalize;

    transition-property: all;
    transition-duration: 600ms;
    transition-timing-function: ease;
}

.sideItemNumber,
.projectItemNumber {
    font-size: 1.8rem;
    font-weight: 600;
    color: var(--white_text);
    background-color: var(--light_primary_color);
    padding: 0.26em 0.4em;
    border-color: transparent;
    border-radius: 26px;

    transition-duration: 360ms;
    transition-property: all;
    transition-timing-function: ease;
}

.sideItem:hover .sideItemNumber,
.sideProjectItem:hover .projectItemNumber {
    background-color: var(--primary_color);
    color: var(--white_color);
}

.sideProjectList {
    min-height: 140px;
    max-height: 260px;
    font-size: 1rem;

    margin-top: min(10px, 1.4em);
    margin-left: 1.6em;
    margin-right: -4em;

    overflow: auto;
    overflow-y: overlay;
    overflow-x: hidden;
    overflow-wrap: break-word;
}

.sideProjectItem {
    font-size: 1rem;
    padding: 1.2em 0;

    display: flex;
    align-items: center;
    justify-content: space-between;

    transition-property: all;
    transition-duration: 600ms;
    transition-timing-function: ease;
}

.projectItemText {
    font-size: 2.4rem;
    color: var(--black_text);
    text-transform: uppercase;

    transition-property: all;
    transition-duration: 600ms;
    transition-timing-function: ease;
}

.projectItemNumber {
    font-size: 1.66rem;
    margin-right: 2em;
}

.sideBtnWrapper {
    position: absolute;
    bottom: 2em;
    font-size: 1rem;
    padding: 0.6em;

    border: 3px solid var(--black_color);
    border-radius: 16px;
    background-color: var(--primary_color);
    box-shadow: 0.46em 0.46em 1.6em var(--black_text);
    cursor: pointer;

    transition-property: all;
    transition-duration: 800ms;
    transition-timing-function: ease-in;
}

.sideBtnIcon {
    height: 4.6rem;
    color: var(--snow_white_color);
    transform: rotate(0);

    transition-property: all;
    transition-duration: 360ms;
    transition-timing-function: ease-in-out;
}

.sideBtnTitle {
    position: absolute;
    top: 66%;
    left: 60%;

    width: max-content;
    display: none;

    color: var(--white_text);
    font-size: 1.66rem;
    font-weight: 600;
    padding: 0.36em 0.6em;
    background-color: var(--dark_gray_color);
    border-radius: 6px;
    -ms-user-select: none;
    user-select: none;
    animation: vanish 560ms ease;
}

.sideBtnAddList {
    position: absolute;
    width: max-content;
    font-size: 1rem;
    padding: 0.8em 1.6em;
    background-color: var(--snow_white_color);
    border-radius: 6px;

    top: -175%;
    left: 70%;
    z-index: 20;
    cursor: pointer;
    box-shadow: var(--card_secondary_box_shadow);

    display: none;
}

.sideBtnAddItem {
    width: 100%;
    font-size: 1.66rem;
    color: var(--black_text);
    font-weight: 500;
    padding: 0.6em 0;

    transition: all 360ms ease;
}

.sideBtnAddItem:hover {
    color: var(--primary_color);
    transform: scale(1.06);
}

.sideBtnWrapper:hover {
    border-radius: 100px;
    background-color: var(--light_primary_color);
    box-shadow: 0.2em 0.2em 1.2em var(--black_text);
}

.sideBtnWrapper:hover .sideBtnIcon {
    transform: rotate(180deg);
}

.sideBtnWrapper:hover .sideBtnTitle,
.sideBtnWrapper:hover .sideBtnAddList {
    display: flex;
    flex-direction: column;
    animation: appear 360ms ease;
}

.sideItem:hover .sideItemText,
.sideProjectItem:hover .projectItemText {
    transform: translate(0.4em, 0.1em);
    color: var(--primary_color);
    font-weight: 500;
}

.sideItem:nth-child(4):hover {
    transform: translate(0);
}

.sideItem:hover .sideItemText::before {
    content: '//';
    display: inline-block;
}

.sideProjectItem:hover .projectItemText::before {
    content: '•';
    display: inline-block;
    margin-right: 0.2em;
}

/* =============================================== */
/* CONTENT SETUP  */
/* =============================================== */
.content {
    grid-column: 2 /3;
    grid-row: 2 / 3;

    font-size: 1rem;
    padding: 3em 4.6em;
    background-color: var(--white_color);
    /* margin-bottom: 0.8em; */

    overflow-y: auto;
}

/* =============================================== */
/* TO DO SECTION SETUP  */
/* =============================================== */
.todoWrapper {
    height: 100%;
    font-size: 1rem;

    display: none;
}

.todoWrapper.show {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(auto-fit, minmax(60px, 80px));
    grid-template-rows: repeat(auto-fit, 60px);
    gap: 1.6em;
}

.todoCard {
    font-size: 1rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: max(20%, 60px);

    padding: 1em 2em;
    background-color: var(--light_gray_color);
    border-radius: 6px;
}

.todoCard,
.todoCard.done {
    transition-property: all;
    transition-duration: 160ms;
    transition-timing-function: ease;
}

.todoCard.importantLow {
    border-left: 6px solid var(--green_color);
}

.todoCard.importantMed {
    border-left: 6px solid var(--yellow_color);
}

.todoCard.importantHigh {
    border-left: 6px solid var(--red_color);
}

.todoCard:hover {
    box-shadow: var(--card_primary_box_shadow);
    transform: scale(1.01);
    /* background-color: var(--footer_bg_color); */
    filter: brightness(1.03);
}

.todoCard.done {
    filter: brightness(0.9);
}

.todoCard.done .tCardHeading,
.todoCard.done .tCardDate {
    text-decoration: line-through;
}

.todoCard.done:hover {
    box-shadow: var(--card_secondary_box_shadow);
    transform: scale(1.003);
}

.tCardLeft {
    font-size: 1rem;
    display: flex;
    align-items: center;
    gap: 1.8em;
}

.tCardCheckBoxWrapper {
    cursor: pointer;
}
/* ... */

